Fixed misaligned old price line-through decoration

--- a/web/css/layout/_price.less
+++ b/web/css/layout/_price.less
@@ -46,9 +46,13 @@
     }
     .old-price {
         .lib-css(color, @price-old__color);
-        .lib-css(text-decoration, @price-old__text-decoration);
-        .lib-css(text-decoration-color, @price-old__text-decoration-color);
         display: inline-block;
+
+        .price,
+        .price-label {
+            .lib-css(text-decoration, @price-old__text-decoration);
+            .lib-css(text-decoration-color, @price-old__text-decoration-color);
+        }
 
         & when (@price-old-label__display = none) {
             .price-label {
